zerocopy-derive/tests/ui-nightly/enum.stderr
error: unrecognized representation hint
  --> /zerocopy-derive/tests/ui-nightly/enum.rs:21:8
   |
21 | #[repr("foo")]
   |        ^^^^^

error: unrecognized representation hint
  --> /zerocopy-derive/tests/ui-nightly/enum.rs:28:8
   |
28 | #[repr(foo)]
   |        ^^^

error: must have #[repr(C)] or #[repr(Int)] attribute in order to guarantee this type's memory layout
  --> /zerocopy-derive/tests/ui-nightly/enum.rs:34:10
   |
34 | #[derive(FromBytes)]
   |          ^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: this conflicts with another representation hint
  --> /zerocopy-derive/tests/ui-nightly/enum.rs:40:8
   |
40 | #[repr(u8, u16)]
   |        ^^^^^^^

error: must have #[repr(C)] or #[repr(Int)] attribute in order to guarantee this type's memory layout
  --> /zerocopy-derive/tests/ui-nightly/enum.rs:46:10
   |
46 | #[derive(FromBytes)]
   |          ^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(C)] or #[repr(Int)] attribute in order to guarantee this type's memory layout
  --> /zerocopy-derive/tests/ui-nightly/enum.rs:73:10
   |
73 | #[derive(TryFromBytes)]
   |          ^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `TryFromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(C)] or #[repr(Int)] attribute in order to guarantee this type's memory layout
  --> /zerocopy-derive/tests/ui-nightly/enum.rs:78:10
   |
78 | #[derive(TryFromBytes)]
   |          ^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `TryFromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(C)] or #[repr(Int)] attribute in order to guarantee this type's memory layout
  --> /zerocopy-derive/tests/ui-nightly/enum.rs:96:10
   |
96 | #[derive(FromZeros)]
   |          ^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromZeros` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(C)] or #[repr(Int)] attribute in order to guarantee this type's memory layout
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:101:10
    |
101 | #[derive(FromZeros)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `FromZeros` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(C)] or #[repr(Int)] attribute in order to guarantee this type's memory layout
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:107:10
    |
107 | #[derive(FromZeros)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `FromZeros` (in Nightly builds, run with -Z macro-backtrace for more info)

error: FromZeros only supported on enums with a variant that has a discriminant of `0`
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:114:1
    |
114 | / #[repr(u8)]
115 | | enum FromZeros4 {
116 | |     A = 1,
117 | |     B = 2,
118 | | }
    | |_^

error: FromZeros only supported on enums with a variant that has a discriminant of `0`
       help: This enum has discriminants which are not literal integers. One of those may define or imply which variant has a discriminant of zero. Use a literal integer to define or imply the variant with a discriminant of zero.
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:123:1
    |
123 | / #[repr(i8)]
124 | | enum FromZeros5 {
125 | |     A = NEGATIVE_ONE,
126 | |     B,
127 | | }
    | |_^

error: FromZeros only supported on enums with a variant that has a discriminant of `0`
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:138:1
    |
138 | / #[repr(u8)]
139 | | enum FromZeros7 {
140 | |     A = 1,
141 | |     B(NotFromZeros),
142 | | }
    | |_^

error: must have #[repr(C)] or #[repr(Int)] attribute in order to guarantee this type's memory layout
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:148:10
    |
148 | #[derive(FromBytes)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `FromBytes` only supported on enums with `#[repr(...)]` attributes `u8`, `i8`, `u16`, or `i16`
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:154:8
    |
154 | #[repr(C)]
    |        ^

error: `FromBytes` only supported on enums with `#[repr(...)]` attributes `u8`, `i8`, `u16`, or `i16`
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:160:8
    |
160 | #[repr(usize)]
    |        ^^^^^

error: `FromBytes` only supported on enums with `#[repr(...)]` attributes `u8`, `i8`, `u16`, or `i16`
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:166:8
    |
166 | #[repr(isize)]
    |        ^^^^^

error: `FromBytes` only supported on enums with `#[repr(...)]` attributes `u8`, `i8`, `u16`, or `i16`
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:172:8
    |
172 | #[repr(u32)]
    |        ^^^

error: `FromBytes` only supported on enums with `#[repr(...)]` attributes `u8`, `i8`, `u16`, or `i16`
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:178:8
    |
178 | #[repr(i32)]
    |        ^^^

error: `FromBytes` only supported on enums with `#[repr(...)]` attributes `u8`, `i8`, `u16`, or `i16`
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:184:8
    |
184 | #[repr(u64)]
    |        ^^^

error: `FromBytes` only supported on enums with `#[repr(...)]` attributes `u8`, `i8`, `u16`, or `i16`
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:190:8
    |
190 | #[repr(i64)]
    |        ^^^

error: must have #[repr(u8)] or #[repr(i8)] attribute in order to guarantee this type's alignment
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:460:10
    |
460 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(u8)] or #[repr(i8)] attribute in order to guarantee this type's alignment
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:466:10
    |
466 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(u8)] or #[repr(i8)] attribute in order to guarantee this type's alignment
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:472:10
    |
472 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(u8)] or #[repr(i8)] attribute in order to guarantee this type's alignment
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:478:10
    |
478 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(u8)] or #[repr(i8)] attribute in order to guarantee this type's alignment
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:484:10
    |
484 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(u8)] or #[repr(i8)] attribute in order to guarantee this type's alignment
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:490:10
    |
490 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(u8)] or #[repr(i8)] attribute in order to guarantee this type's alignment
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:496:10
    |
496 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(u8)] or #[repr(i8)] attribute in order to guarantee this type's alignment
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:502:10
    |
502 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(u8)] or #[repr(i8)] attribute in order to guarantee this type's alignment
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:508:10
    |
508 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error: cannot derive `Unaligned` on type with alignment greater than 1
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:515:12
    |
515 | #[repr(u8, align(2))]
    |            ^^^^^^^^

error: cannot derive `Unaligned` on type with alignment greater than 1
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:521:12
    |
521 | #[repr(i8, align(2))]
    |            ^^^^^^^^

error: this conflicts with another representation hint
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:527:8
    |
527 | #[repr(align(1), align(2))]
    |        ^^^^^^^^^^^^^^^^^^

error: this conflicts with another representation hint
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:533:8
    |
533 | #[repr(align(2), align(4))]
    |        ^^^^^^^^^^^^^^^^^^

error: must have #[repr(C)] or #[repr(Int)] attribute in order to guarantee this type's memory layout
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:566:10
    |
566 | #[derive(IntoBytes)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(C)] or #[repr(Int)] attribute in order to guarantee this type's memory layout
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:572:10
    |
572 | #[derive(IntoBytes)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: generic parameters may not be used in const operations
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:580:7
    |
580 |     A(T),
    |       ^ cannot perform const operation using `T`
    |
    = note: type parameters may not be used in const expressions
    = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error[E0565]: meta item in `repr` must be an identifier
  --> /zerocopy-derive/tests/ui-nightly/enum.rs:21:1
   |
21 | #[repr("foo")]
   | ^^^^^^^^^^^^^^

error[E0552]: unrecognized representation hint
  --> /zerocopy-derive/tests/ui-nightly/enum.rs:28:8
   |
28 | #[repr(foo)]
   |        ^^^
   |
   = help: valid reprs are `Rust` (default), `C`, `align`, `packed`, `transparent`, `simd`, `i8`, `u8`, `i16`, `u16`, `i32`, `u32`, `i64`, `u64`, `i128`, `u128`, `isize`, `usize`
   = note: for more information, visit <https://doc.rust-lang.org/reference/type-layout.html?highlight=repr#representations>

error[E0566]: conflicting representation hints
  --> /zerocopy-derive/tests/ui-nightly/enum.rs:40:8
   |
40 | #[repr(u8, u16)]
   |        ^^  ^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>
   = note: `#[deny(conflicting_repr_hints)]` (part of `#[deny(future_incompatible)]`) on by default

error[E0277]: the trait bound `UnsafeCell<()>: Immutable` is not satisfied
  --> /zerocopy-derive/tests/ui-nightly/enum.rs:55:10
   |
55 | #[derive(Immutable)]
   |          ^^^^^^^^^ the trait `Immutable` is not implemented for `UnsafeCell<()>`
   |
   = note: Consider adding `#[derive(Immutable)]` to `UnsafeCell<()>`
   = help: the following other types implement trait `Immutable`:
             &T
             &mut T
             ()
             *const T
             *mut T
             F32<O>
             F64<O>
             I128<O>
           and 102 others
   = help: see issue #48214
   = note: this error originates in the derive macro `Immutable` (in Nightly builds, run with -Z macro-backtrace for more info)
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   |
11 + #![feature(trivial_bounds)]
   |

error[E0277]: the trait bound `UnsafeCell<u8>: Immutable` is not satisfied
  --> /zerocopy-derive/tests/ui-nightly/enum.rs:63:10
   |
63 | #[derive(Immutable)]
   |          ^^^^^^^^^ the trait `Immutable` is not implemented for `UnsafeCell<u8>`
   |
   = note: Consider adding `#[derive(Immutable)]` to `UnsafeCell<u8>`
   = help: the following other types implement trait `Immutable`:
             &T
             &mut T
             ()
             *const T
             *mut T
             F32<O>
             F64<O>
             I128<O>
           and 102 others
   = help: see issue #48214
   = note: this error originates in the derive macro `Immutable` (in Nightly builds, run with -Z macro-backtrace for more info)
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   |
11 + #![feature(trivial_bounds)]
   |

error[E0277]: the trait bound `NotTryFromBytes: TryFromBytes` is not satisfied
  --> /zerocopy-derive/tests/ui-nightly/enum.rs:86:10
   |
86 | #[derive(TryFromBytes)]
   |          ^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `TryFromBytes` is not implemented for `NotTryFromBytes`
  --> /zerocopy-derive/tests/ui-nightly/enum.rs:84:1
   |
84 | struct NotTryFromBytes;
   | ^^^^^^^^^^^^^^^^^^^^^^
   = note: Consider adding `#[derive(TryFromBytes)]` to `NotTryFromBytes`
   = help: the following other types implement trait `TryFromBytes`:
             ()
             *const T
             *mut T
             <FromZeros6 as TryFromBytes>::is_bit_valid::___ZerocopyVariantStruct_A
             <TryFromBytes3 as TryFromBytes>::is_bit_valid::___ZerocopyVariantStruct_A
             AtomicBool
             AtomicI16
             AtomicI32
           and 129 others
   = help: see issue #48214
   = note: this error originates in the derive macro `TryFromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   |
11 + #![feature(trivial_bounds)]
   |

error[E0277]: the trait bound `NotFromZeros: TryFromBytes` is not satisfied
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:131:10
    |
131 | #[derive(FromZeros)]
    |          ^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `TryFromBytes` is not implemented for `NotFromZeros`
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:129:1
    |
129 | struct NotFromZeros;
    | ^^^^^^^^^^^^^^^^^^^
    = note: Consider adding `#[derive(TryFromBytes)]` to `NotFromZeros`
    = help: the following other types implement trait `TryFromBytes`:
              ()
              *const T
              *mut T
              <FromZeros6 as TryFromBytes>::is_bit_valid::___ZerocopyVariantStruct_A
              <TryFromBytes3 as TryFromBytes>::is_bit_valid::___ZerocopyVariantStruct_A
              AtomicBool
              AtomicI16
              AtomicI32
            and 129 others
    = help: see issue #48214
    = note: this error originates in the derive macro `FromZeros` (in Nightly builds, run with -Z macro-backtrace for more info)
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
    |
 11 + #![feature(trivial_bounds)]
    |

error[E0277]: the trait bound `NotFromZeros: FromZeros` is not satisfied
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:131:10
    |
131 | #[derive(FromZeros)]
    |          ^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `FromZeros` is not implemented for `NotFromZeros`
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:129:1
    |
129 | struct NotFromZeros;
    | ^^^^^^^^^^^^^^^^^^^
    = note: Consider adding `#[derive(FromZeros)]` to `NotFromZeros`
    = help: the following other types implement trait `FromZeros`:
              ()
              *const T
              *mut T
              AtomicBool
              AtomicI16
              AtomicI32
              AtomicI64
              AtomicI8
            and 114 others
    = help: see issue #48214
    = note: this error originates in the derive macro `FromZeros` (in Nightly builds, run with -Z macro-backtrace for more info)
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
    |
 11 + #![feature(trivial_bounds)]
    |

error[E0277]: the trait bound `bool: FromBytes` is not satisfied
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:195:10
    |
195 | #[derive(FromBytes)]
    |          ^^^^^^^^^ the trait `FromBytes` is not implemented for `bool`
    |
    = note: Consider adding `#[derive(FromBytes)]` to `bool`
    = help: the following other types implement trait `FromBytes`:
              ()
              AtomicI16
              AtomicI32
              AtomicI64
              AtomicI8
              AtomicIsize
              AtomicU16
              AtomicU32
            and 51 others
    = help: see issue #48214
    = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
    |
 11 + #![feature(trivial_bounds)]
    |

error[E0277]: `IntoBytes1` has 1 total byte(s) of padding
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:542:10
    |
542 | #[derive(IntoBytes)]
    |          ^^^^^^^^^ types with padding cannot implement `IntoBytes`
    |
    = note: consider using `zerocopy::Unalign` to lower the alignment of individual fields
    = note: consider adding explicit fields where padding would be
    = note: consider using `#[repr(packed)]` to remove padding
help: the trait `PaddingFree<IntoBytes1, 1>` is not implemented for `()`
      but trait `PaddingFree<IntoBytes1, 0>` is implemented for it
   --> /src/util/macro_util.rs:63:1
    |
 63 | impl<T: ?Sized> PaddingFree<T, 0> for () {}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = help: see issue #48214
    = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
    |
 11 + #![feature(trivial_bounds)]
    |

error[E0277]: `IntoBytes2` has 3 total byte(s) of padding
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:553:10
    |
553 | #[derive(IntoBytes)]
    |          ^^^^^^^^^ types with padding cannot implement `IntoBytes`
    |
    = note: consider using `zerocopy::Unalign` to lower the alignment of individual fields
    = note: consider adding explicit fields where padding would be
    = note: consider using `#[repr(packed)]` to remove padding
help: the trait `PaddingFree<IntoBytes2, 3>` is not implemented for `()`
      but trait `PaddingFree<IntoBytes2, 0>` is implemented for it
   --> /src/util/macro_util.rs:63:1
    |
 63 | impl<T: ?Sized> PaddingFree<T, 0> for () {}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = help: see issue #48214
    = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
    |
 11 + #![feature(trivial_bounds)]
    |

error[E0277]: `IntoBytes3` has 2 total byte(s) of padding
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:559:10
    |
559 | #[derive(IntoBytes)]
    |          ^^^^^^^^^ types with padding cannot implement `IntoBytes`
    |
    = note: consider using `zerocopy::Unalign` to lower the alignment of individual fields
    = note: consider adding explicit fields where padding would be
    = note: consider using `#[repr(packed)]` to remove padding
help: the trait `PaddingFree<IntoBytes3, 2>` is not implemented for `()`
      but trait `PaddingFree<IntoBytes3, 0>` is implemented for it
   --> /src/util/macro_util.rs:63:1
    |
 63 | impl<T: ?Sized> PaddingFree<T, 0> for () {}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = help: see issue #48214
    = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
    |
 11 + #![feature(trivial_bounds)]
    |

error: generic `Self` types are currently not permitted in anonymous constants
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:577:10
    |
577 | #[derive(IntoBytes)]
    |          ^^^^^^^^^
    |
note: not a concrete type
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:577:10
    |
577 | #[derive(IntoBytes)]
    |          ^^^^^^^^^
    = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `bool: FromBytes` is not satisfied
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:195:10
    |
195 | #[derive(FromBytes)]
    |          ^^^^^^^^^ the trait `FromBytes` is not implemented for `bool`
    |
    = note: Consider adding `#[derive(FromBytes)]` to `bool`
    = help: the following other types implement trait `FromBytes`:
              ()
              AtomicI16
              AtomicI32
              AtomicI64
              AtomicI8
              AtomicIsize
              AtomicU16
              AtomicU32
            and 51 others
note: required for `FooU8` to implement `FromBytes`
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:195:10
    |
195 | #[derive(FromBytes)]
    |          ^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
note: required by a bound in `assert_is_from_bytes`
   --> /zerocopy-derive/tests/ui-nightly/enum.rs:195:10
    |
195 | #[derive(FromBytes)]
    |          ^^^^^^^^^ required by this bound in `assert_is_from_bytes`
    = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 51 previous errors

Some errors have detailed explanations: E0277, E0552, E0565, E0566.
For more information about an error, try `rustc --explain E0277`.
